feat(popular-post): Redis 저장 로직 수정